--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Joshua Cox",
     "license": "ISC",
     "dependencies": {
         "node-twitterbot": "^0.2.2",
