--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Twitter Bot",
     "main": "bot.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node bot.js"
+
     },
     "author": "Joshua Cox",
     "license": "ISC",
