corrected issues with node

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
     "name": "twitter-bot",
     "version": "1.0.0",
     "description": "Twitter Bot",
-    "main": "bot.js",
+    "main": "index.js",
     "scripts": {
         "start": "node bot.js"
-
     },
     "author": "Joshua Cox",
     "license": "ISC",
