updated gitignore with env file. and created env file.  also corrected issues with twitter-bot module

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "Joshua Cox",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^8.0.0",
         "node-twitterbot": "^0.2.2",
         "twit": "^2.2.11"
     }
